--- a/home.html
+++ b/home.html
@@ -4,6 +4,6 @@
             <title>Website</title>
         </head>
         <body>
-            <h1>Hello</h1>
+            <h1>Hello world</h1>
         </body>
     </html>
